# synth-atom-bench

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
configs/: sweep.yaml  train.yaml
configs/data/: chain_N10.yaml  chain_N20.yaml  chain_N50.yaml  easy_small.yaml  hard_small.yaml  medium_large.yaml  medium_small.yaml  nbody_n15_b2_T0.5.yaml  nbody_n15_b2_T0.6.yaml  nbody_n15_b2_T0.8.yaml  nbody_n15_b2_T1.0.yaml  nbody_n15_b2_T1.5.yaml  nbody_n15_b2_T2.0.yaml  nbody_n15_b2_T3.0.yaml  nbody_n20_b2_hw_T0.6.yaml  (+21 more)
data/: chain_dataset.py  dataset.py  generate.py  generate_chains.py  generate_nbody.py  generate_sequence.py  generate_vsepr.py  nbody_dataset.py  sequence_dataset.py  unified_dataset.py  validate.py  validate_chains.py  visualize.py  vsepr_dataset.py
docs/: big_picture.md  project_description.md
experiments/: checkpointing.py  chinchilla.py  evaluate.py  logger.py  model_registry.py  scaling.py  sweep_hparams.py  task_registry.py  train.py
flow_matching/: interpolation.py  relax.py  sampling.py  training.py
metrics/: bond_violation.py  clash_rate.py  gr_distance.py  sequence_metrics.py  unified_metrics.py  vsepr_metrics.py  vsepr_plus_metrics.py  wasserstein_distance.py
models/: common.py  painn.py  pairformer.py  transformer.py
scripts/: run_chain_scaling.sh  run_scaling.sh  run_sweep.sh  validate_painn.py
tests/: test_chains.py  test_data.py  test_flow_matching.py  test_metrics.py  test_models.py
viz/: __init__.py  chinchilla.py  metrics.py  nbody_dist.py  nbody_eval.py  nbody_structure.py  scaling.py  structure.py  style.py  training.py
(+14 files in other folders)
